external-crates/move/crates/move-package-alt/tests/snapshots/manifest_parsing_test__tests__data__manifest_parsing_invalid__basic_invalid_environment.snap
---
source: crates/move-package-alt/tests/manifest_parsing_test.rs
expression: manifest
---
Err(
    Error {
        inner: ErrorInner {
            message: "invalid type: integer `9123`, expected a string",
            reverse_key: [
                InternalString(
                    "mainnet",
                ),
                InternalString(
                    "environments",
                ),
            ],
            line_col: None,
        },
    },
)
