external-crates/move/crates/move-package-alt/tests/snapshots/manifest_parsing_test__tests__data__manifest_parsing_invalid__basic_missing_dep_override_git.snap
---
source: crates/move-package-alt/tests/manifest_parsing_test.rs
expression: manifest
---
Err(
    Error {
        inner: ErrorInner {
            message: "invalid type: string \"true\", expected a boolean",
            reverse_key: [
                InternalString(
                    "override",
                ),
                InternalString(
                    "foo",
                ),
                InternalString(
                    "dependencies",
                ),
            ],
            line_col: None,
        },
    },
)
