external-crates/move/crates/move-package-alt/tests/snapshots/manifest_parsing_test__tests__data__manifest_parsing_invalid__duplicate_top_level_field.snap
---
source: crates/move-package-alt/tests/manifest_parsing_test.rs
expression: manifest
---
Err(
    Error {
        inner: ErrorInner {
            message: "TOML parse error at line 4, column 1\n  |\n4 | [package]\n  | ^\nDuplicate key `package` in document root\n\nWhile parsing a Table Header\n",
            reverse_key: [],
            line_col: Some(
                (
                    3,
                    0,
                ),
            ),
        },
    },
)
