external-crates/move/crates/move-package-alt/tests/snapshots/manifest_parsing_test__tests__data__manifest_parsing_invalid__invalid_author.snap
---
source: crates/move-package-alt/tests/manifest_parsing_test.rs
expression: manifest
---
Err(
    Error {
        inner: ErrorInner {
            message: "missing field `edition`",
            reverse_key: [
                InternalString(
                    "package",
                ),
            ],
            line_col: None,
        },
    },
)
