external-crates/move/crates/move-package-alt/tests/snapshots/manifest_parsing_test__tests__data__manifest_parsing_invalid__non_string_package_name.snap
---
source: crates/move-package-alt/tests/manifest_parsing_test.rs
expression: manifest
---
Err(
    Error {
        inner: ErrorInner {
            message: "invalid type: integer `1`, expected a string",
            reverse_key: [
                InternalString(
                    "name",
                ),
                InternalString(
                    "package",
                ),
            ],
            line_col: None,
        },
    },
)
